Add Skycoin, WorkSans Fonts

--- a/src/components/modal/modal.html
+++ b/src/components/modal/modal.html
@@ -1,6 +1,9 @@
 <div class="-modal">
   <div class="-header">
-    {{ header }}
+    <span> {{ header }} </span>
+    <button ion-button color="light" clear>
+      <ion-icon name="close"></ion-icon>
+    </button>
   </div>
   <div class="-body">
     <ng-content></ng-content>
