[mobileweb] Finish     #40 skycoin/skycoin-mobilewallet Create Modal Component Finish     #31 skycoin/skycoin-mobilewallet On-boarding " Modal Disclaimer Create/Load Wallet"

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -132,6 +132,10 @@ ion-buttons {
   font-weight: 700;
 }
 
+.blurred{
+  filter: blur(5px);
+}
+
 .ion-ios-backspace,
 .ion-md-backspace {
   content: url(../assets/icon/backspace-black.svg);
