--- a/src/pages/wallet-detail/wallet-detail.scss
+++ b/src/pages/wallet-detail/wallet-detail.scss
@@ -1,12 +1,5 @@
 #pages-wallet-detail {
   background-color: $background-color-normal;
-
-  .-header {
-    min-height: 170px;
-    padding: 80px 0 0 0;
-    width: 100%;
-  }
-
   h1 span {
     font-size: 20px;
   }
@@ -43,7 +36,9 @@
   }
 }
 
-.is-hidden { display: none; }
+.is-hidden {
+  display: none;
+}
 
 .button-close {
   display: inline-block;
@@ -62,7 +57,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0,0,0,0.6);
+  background: rgba(0, 0, 0, 0.6);
   z-index: 999;
 }
 
