--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -73,11 +73,16 @@ modal {
         .-checkbox-container {
           width: fit-content;
           margin: 0 auto;
-        }
-
-        ion-checkbox {
-          margin: 10px 10px 0 0;
-          float: left;
+          ion-item {
+            background: transparent;
+            .item-inner {
+              border: none;
+            }
+          }
+          ion-checkbox{
+            margin-right: 10px;
+            margin-top: 7px;
+          }
         }
 
         ion-label {
@@ -97,12 +102,12 @@ modal {
         width: auto !important;
         text-transform: capitalize;
         box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
-          0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+        0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
         color: #fbfbfb;
         background: linear-gradient(
-          to bottom right,
-          #0072ff,
-          #00c3ff
+            to bottom right,
+            #0072ff,
+            #00c3ff
         ) !important;
         font-family: Skycoin;
         line-height: normal;
