--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -52,24 +52,24 @@ ion-buttons {
 .sky-container {
   background: $gradient-blue-dark; /* For browsers that do not support gradients */
   background: -webkit-linear-gradient(
-    left top,
-    $gradient-blue-dark,
-    $gradient-blue-light
+      left top,
+      $gradient-blue-dark,
+      $gradient-blue-light
   ); /* For Safari 5.1 to 6.0 */
   background: -o-linear-gradient(
-    bottom right,
-    $gradient-blue-dark,
-    $gradient-blue-light
+      bottom right,
+      $gradient-blue-dark,
+      $gradient-blue-light
   ); /* For Opera 11.1 to 12.0 */
   background: -moz-linear-gradient(
-    bottom right,
-    $gradient-blue-dark,
-    $gradient-blue-light
+      bottom right,
+      $gradient-blue-dark,
+      $gradient-blue-light
   ); /* For Firefox 3.6 to 15 */
   background: linear-gradient(
-    to bottom right,
-    $gradient-blue-dark,
-    $gradient-blue-light
+      to bottom right,
+      $gradient-blue-dark,
+      $gradient-blue-light
   ); /* Standard syntax */
   height: 100%;
   width: 100%;
@@ -78,24 +78,24 @@ ion-buttons {
 .primary-gradient {
   background: $gradient-blue-dark; /* For browsers that do not support gradients */
   background: -webkit-linear-gradient(
-    left top,
-    $gradient-blue-dark,
-    $gradient-blue-light
+      left top,
+      $gradient-blue-dark,
+      $gradient-blue-light
   ); /* For Safari 5.1 to 6.0 */
   background: -o-linear-gradient(
-    bottom right,
-    $gradient-blue-dark,
-    $gradient-blue-light
+      bottom right,
+      $gradient-blue-dark,
+      $gradient-blue-light
   ); /* For Opera 11.1 to 12.0 */
   background: -moz-linear-gradient(
-    bottom right,
-    $gradient-blue-dark,
-    $gradient-blue-light
+      bottom right,
+      $gradient-blue-dark,
+      $gradient-blue-light
   ); /* For Firefox 3.6 to 15 */
   background: linear-gradient(
-    to bottom right,
-    $gradient-blue-dark,
-    $gradient-blue-light
+      to bottom right,
+      $gradient-blue-dark,
+      $gradient-blue-light
   ); /* Standard syntax */
 }
 
@@ -105,26 +105,26 @@ ion-buttons {
       left top,
       $gradient-blue-dark-transparent,
       $gradient-blue-light-transparent
-    ),
-    url('../assets/img/header.png') center center no-repeat; /* For Safari 5.1 to 6.0 */
+  ),
+  url('../assets/img/header.png') center center no-repeat; /* For Safari 5.1 to 6.0 */
   background: -o-linear-gradient(
       bottom right,
       $gradient-blue-dark-transparent,
       $gradient-blue-light-transparent
-    ),
-    url('../assets/img/header.png') center center no-repeat; /* For Opera 11.1 to 12.0 */
+  ),
+  url('../assets/img/header.png') center center no-repeat; /* For Opera 11.1 to 12.0 */
   background: -moz-linear-gradient(
       bottom right,
       $gradient-blue-dark-transparent,
       $gradient-blue-light-transparent
-    ),
-    url('../assets/img/header.png') center center no-repeat; /* For Firefox 3.6 to 15 */
+  ),
+  url('../assets/img/header.png') center center no-repeat; /* For Firefox 3.6 to 15 */
   background: linear-gradient(
       to bottom right,
       $gradient-blue-dark-transparent,
       $gradient-blue-light-transparent
-    ),
-    url('../assets/img/header.png') center center no-repeat; /* Standard syntax */
+  ),
+  url('../assets/img/header.png') center center no-repeat; /* Standard syntax */
 }
 
 .column-80 {
@@ -272,4 +272,13 @@ ion-buttons {
   &[ng-reflect-is-active='true'] {
     content: url(../assets/icon/backspace-white.svg);
   }
+
+}
+
+.ion-ios-sky-close,
+.ion-md-sky-close {
+  content: url(../assets/icon/sky-close.svg);
+  width: 16px;
+  height: 16px;
+  padding: 0;
 }
