--- a/src/components/modal/modal.html
+++ b/src/components/modal/modal.html
@@ -2,7 +2,7 @@
   <div class="-header">
     <span> {{ header }} </span>
     <button (click)="cancelAction()" ion-button color="light" clear>
-      <ion-icon name="close"></ion-icon>
+      <ion-icon name="sky-close"></ion-icon>
     </button>
   </div>
   <div class="-body">
