Add Wallet Create Page

--- a/src/pages/pincode/pincode.scss
+++ b/src/pages/pincode/pincode.scss
@@ -47,7 +47,7 @@ page-pincode {
         padding: 0 0 5px 0px;
       }
       &:active {
-        background-color: #1E2227 !important;
+        background-color: #1e2227 !important;
         opacity: 0.5;
         .ion-ios-backspace,
         .ion-md-backspace {
@@ -213,8 +213,4 @@ page-pincode {
       transform: translate(0, 0);
     }
   }
-
-
 }
-
-
