--- a/src/components/button/button.component.scss
+++ b/src/components/button/button.component.scss
@@ -38,8 +38,8 @@ app-button {
         box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
         0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
         color: rgba(30, 34, 39, 0.2);
-        background-color: #f0f0f0 !important;
-        box-shadow: unset;
+        background-color: #F0F0F0 !important;
+        box-shadow: none;
         cursor: default;
       }
     }
@@ -53,7 +53,7 @@ app-button {
       0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
       color: #1e2227;
       background-color: #f9f8f3;
-
+      box-shadow: none;
       &:hover {
         background-color: #f1f0eb !important;
       }
