Wallet Styles Fix

--- a/src/pages/pincode/pincode.scss
+++ b/src/pages/pincode/pincode.scss
@@ -103,7 +103,7 @@ page-pincode {
   }
 
   .pin-instructions {
-    padding: 0 20px;
+    margin-top: 60px;
     color: white;
     p {
       font-size: 14px;
