--- a/src/pages/ob-create-wallet/ob-create-wallet.scss
+++ b/src/pages/ob-create-wallet/ob-create-wallet.scss
@@ -7,6 +7,16 @@ page-ob-create-wallet {
   text-align: center;
   box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.6);
 
+  .pin-instructions {
+    padding: 0 20px;
+    color: white;
+    p {
+      font-size: 14px;
+      line-height: 20px;
+      opacity: 0.5;
+      margin: 0;
+    }
+  }
   .form-group {
     width: 90%;
     margin: 15px auto;
