Format Fix _All_ App

--- a/src/pages/add-wallet/add-wallet.scss
+++ b/src/pages/add-wallet/add-wallet.scss
@@ -8,7 +8,7 @@ page-add-wallet {
     text-align: center;
     letter-spacing: 0.0769231em;
 
-    color: #1E2227;
+    color: #1e2227;
   }
 
   .toolbar-title {
@@ -18,7 +18,7 @@ page-add-wallet {
     text-align: center;
     letter-spacing: 0.0769231em;
 
-    color: #1E2227;
+    color: #1e2227;
   }
 
   position: fixed;
@@ -59,8 +59,7 @@ page-add-wallet {
 
   ion-input,
   ion-textarea {
-
-    background: #FFFFFF;
+    background: #ffffff;
     border: 2px solid rgba(0, 0, 0, 0.05);
     box-sizing: border-box;
     border-radius: 6px;
