--- a/src/pages/ob-create-wallet/ob-create-wallet.scss
+++ b/src/pages/ob-create-wallet/ob-create-wallet.scss
@@ -1,5 +1,4 @@
 page-ob-create-wallet {
-
   position: fixed;
   overflow: hidden;
   z-index: 9999;
@@ -21,7 +20,7 @@ page-ob-create-wallet {
     width: 90%;
     margin: 15px auto;
     ion-label {
-      color: #1E2227;
+      color: #1e2227;
       font-family: Skycoin;
       line-height: normal;
       font-size: 14px;
