--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -273,3 +273,30 @@ ion-buttons {
     content: url(../assets/icon/backspace-white.svg);
   }
 }
+
+.ion-ios-receive-trans,
+.ion-md-receive-trans {
+  content: url(../assets/icon/receive-transaction.svg);
+  width: 32px;
+  height: 32px;
+  margin: 0 0 0 10px;
+  opacity: 0.9;
+}
+
+.ion-ios-send-trans,
+.ion-md-send-trans {
+  content: url(../assets/icon/send-transaction.svg);
+  width: 32px;
+  height: 32px;
+  margin: 0 0 0 10px;
+  opacity: 0.9;
+}
+
+.ion-ios-sky-qr,
+.ion-md-sky-qr {
+  content: url(../assets/icon/qr.svg);
+  width: 32px;
+  height: 32px;
+  margin: 0 0 0 10px;
+  opacity: 0.9;
+}
