--- a/src/pages/transactions/transactions.scss
+++ b/src/pages/transactions/transactions.scss
@@ -1,19 +1,84 @@
-#pages-transactions {
+page-transactions {
   background-color: $background-color-normal;
+
+  .toolbar-title {
+    font-family: Skycoin;
+    line-height: 30px;
+    font-size: 14px;
+    text-align: center;
+    letter-spacing: 0.0769231em;
+    color: #fff;
+  }
+  .toolbar-background {
+    background: linear-gradient(to bottom right, #0072ff, #00c3ff) !important;
+  }
+  span.button-inner {
+    ion-icon {
+      height: 20px;
+    }
+  }
 
   .-header {
     min-height: 40px;
     width: 100%;
   }
 
-  ion-item-divider {
-    min-height: 50px;
-    padding-right: 32px;
+  .trans-title {
+    font-family: Skycoin;
+    line-height: normal;
+    font-size: 13px;
+
+    color: #1e2227;
   }
 
-  ion-item.item .item-inner {
+  .trans-subtitle {
+    font-family: Skycoin;
+    line-height: normal;
+    font-size: 10px;
+    color: rgba(30, 34, 39, 0.2);
+    &.pending {
+      color: #fdb51e;
+    }
+  }
+
+  .trans-address {
+    font-family: Skycoin;
+    line-height: normal;
     font-size: 13px;
-    min-height: 69px;
+    color: rgba(30, 34, 39, 0.5);
+    mix-blend-mode: normal;
+  }
+
+  .ion-ios-sky-qr,
+  .ion-md-sky-qr {
+    height: 17px;
+    width: 17px;
+    margin: 0px 0 -3px 0;
+    position: relative;
+  }
+
+  .ion-ios-send-trans,
+  .ion-md-send-trans {
+    margin: 20px 0 0 10px;
+    position: relative;
+    .-pending {
+      opacity: 0.5;
+    }
+  }
+  .ion-ios-receive-trans,
+  .ion-md-receive-trans {
+    margin: 20px 0 0 10px;
+    position: relative;
+    .-pending {
+      opacity: 0.5;
+    }
+  }
+
+  .item-md,
+  item-ios,
+  item-inner {
+    padding: 0;
+    margin: 15px 0 0 0;
+    height: 80px;
   }
 }
-
