Finish refs#62 and refs#63
- refs#62 Fix Actions Buttons
- refs#63 Add Notification Component

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -304,3 +304,11 @@ ion-buttons {
   height: 16px;
   padding: 0;
 }
+
+.ion-ios-notification-ok,
+.ion-md-notification-ok {
+  content: url(../assets/icon/notification-ok.svg);
+  width: 16px;
+  height: 16px;
+  padding: 0;
+}
