--- a/src/pages/wallets/wallets.scss
+++ b/src/pages/wallets/wallets.scss
@@ -52,6 +52,9 @@ $screen-padding: 32px;
       padding: 0;
     }
   }
+  .-actions-buttons-texts {
+    margin: 3px 0 0 6px;
+  }
 
   .-header-table {
     font-family: Skycoin;
