--- a/src/components/notification/notification.scss
+++ b/src/components/notification/notification.scss
@@ -15,4 +15,9 @@ notification {
   ion-icon {
     margin: 0 5px -3px 15px;
   }
+  .-notification-close {
+    float: right;
+    margin: 13px 15px 0 0px;
+    opacity: 0.4;
+  }
 }
