-Add qr icon -Add ionic grid

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -297,6 +297,15 @@ ion-buttons {
   opacity: 0.9;
 }
 
+.ion-ios-sky-qr2,
+.ion-md-sky-qr2 {
+  content: url(../assets/icon/qr2.svg);
+  width: 41px;
+  height: 41px;
+  margin: 5px 0 0 0px;
+  opacity: 0.9;
+}
+
 .ion-ios-sky-close,
 .ion-md-sky-close {
   content: url(../assets/icon/sky-close.svg);
